--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
+title: Fizzez
+subtitle: A blog
 description:
 keywords:
-author: John Doe
+author: Yudong, WANG
 language: en
 timezone:
 
